Actualizo los archivos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <main class="recipe">
       <figure>
-        <img src="./assets/images/image-omelette.jpeg" alt="">
+        <img src="./assets/images/image-omelette.jpeg" alt="omelette image">
       </figure>
       <div class="recipe__home">
         <h1>Simple Omelette Recipe</h1>
@@ -66,8 +66,8 @@
       <hr>
       <section class="recipe__nutrition">
         <h2 class="tx-color">Nutrition</h2>
-        <p>The table below shows nutritional values per serving without the additional fillings.</p>
         <table>
+          <caption>The table below shows nutritional values per serving without the additional fillings.</caption>
           <tr>
             <th>Calories</th>
             <td>277kcal</td>
